# mev-proxy

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
scripts/: deploy.py
src/: ERC1967Proxy.sol  ERC1967Utils.sol  Proxy.sol  ProxyAdmin.sol  TransparentUpgradeableProxy.sol
src/interfaces/: IBeacon.sol  IERC1967.sol  UpgradeableBeaconMock.t.sol
src/libraries/: Address.sol  StorageSlot.sol
test/: BasicCheck.t.sol
test/mock/: Counter.sol
